# libraw-rs

./: .gitignore  Cargo.toml  README.md  build.rs
docs/superpowers/plans/: 2026-06-08-libraw-rs-implementation.md
docs/superpowers/specs/: 2026-06-08-libraw-rs-binding-design.md
examples/: extract_thumb.rs  simple.rs
src/: callbacks.rs  context.rs  error.rs  high_level.rs  image.rs  lib.rs  metadata.rs  params.rs  process.rs  stream.rs  utils.rs
static_lib/win/: libraw_static.lib
